# field_services_agent

./: .env  .gitignore  API_README.md  PROJECT_STRUCTURE.md  README.md  app.py  config.yaml  evals_hold_reason.py  evals_work_log.py  main.py  pyproject.toml  realtime_1.py  requirements.txt  streamlit_app.py  test_car_completion_script.py  test_summary_script.py  time_entry_analysis.ipynb  update_database.py  websocket.py
Data/test_data/: CAR_completion.csv  evals_results.csv  evals_results_summary.csv  hold_reason_test_data.csv  pending_completion_notes_test.csv  pending_work_status_logs_test.csv  test.txt  test_completion_notes.csv  test_data.csv  test_summary_output.csv
Database/: README.md  completion_notes.csv  hold_notes.csv  status_log_chat.csv  technicians.csv  work_orders.csv  work_status_logs.csv  work_status_types.csv
models/: models.py
prompts/: prompts.yaml
src/: ai_classifier.py  api_client.py  data_access.py  data_manager.py  field_services.py  utils.py
test_data/: pending_completion_notes_test.csv  pending_work_status_logs_test.csv
